crates/iscc-ffi/include/iscc.h

/**
 * Opaque FFI wrapper around `iscc_lib::DataHasher`.
 *
 * Enforces finalize-once semantics via `Option<Inner>`. Not `#[repr(C)]` —
 * C callers interact only through function pointers.
 */
typedef struct iscc_FfiDataHasher iscc_FfiDataHasher;
/**
 * Opaque FFI wrapper around `iscc_lib::InstanceHasher`.
 *
 * Enforces finalize-once semantics via `Option<Inner>`. Not `#[repr(C)]` —
 * C callers interact only through function pointers.
 */
typedef struct iscc_FfiInstanceHasher iscc_FfiInstanceHasher;
/**
 * Heap-allocated byte buffer returned to C callers.
 *
 * On success, `data` points to a contiguous byte array of `len` bytes.
 * On error, `data` is `NULL` and `len` is 0. Callers must free with
 * `iscc_free_byte_buffer()`.
 */
typedef struct iscc_IsccByteBuffer {
  /**
   * Pointer to the byte data (`NULL` if error).
   */
  uint8_t *data;
  /**
   * Number of bytes.
   */
  uintptr_t len;
} iscc_IsccByteBuffer;
/**
 * Array of byte buffers (for `iscc_alg_cdc_chunks`).
 *
 * Contains `count` elements pointed to by `buffers`. Callers must free
 * with `iscc_free_byte_buffer_array()`.
 */
typedef struct iscc_IsccByteBufferArray {
  /**
   * Pointer to array of `IsccByteBuffer` elements.
   */
  struct iscc_IsccByteBuffer *buffers;
  /**
   * Number of buffers.
   */
  uintptr_t count;
} iscc_IsccByteBufferArray;
/**
 * Decompose a composite ISCC-CODE into individual ISCC-UNITs.
 *
 * Accepts a normalized ISCC-CODE or concatenated ISCC-UNIT sequence.
 * The optional "ISCC:" prefix is stripped before decoding.
 * Returns a NULL-terminated array of heap-allocated C strings.
 *
 * # Returns
 *
 * NULL-terminated array on success, `NULL` on error (check `iscc_last_error()`).
 * Caller must free with `iscc_free_string_array()`.
 *
 * # Safety
 *
 * `iscc_code` must point to a valid null-terminated UTF-8 string, or be null.
 */
 char **iscc_decompose(const char *iscc_code);
/**
 * Generate sliding window n-grams from a string.
 *
 * Returns a NULL-terminated array of overlapping substrings of `width`
 * Unicode characters, advancing by one character at a time.
 *
 * # Returns
 *
 * NULL-terminated array on success, `NULL` on error (check `iscc_last_error()`).
 * Caller must free with `iscc_free_string_array()`.
 *
 * # Safety
 *
 * `seq` must point to a valid null-terminated UTF-8 string, or be null.
 */
 char **iscc_sliding_window(const char *seq, uint32_t width);
/**
 * Compute a SimHash digest from an array of byte digests.
 *
 * The output length matches the input digest length (e.g., 4-byte digests
 * produce a 4-byte SimHash). Returns an empty 32-byte buffer for empty input.
 *
 * # Parameters
 *
 * - `digests`: array of pointers to digest byte arrays
 * - `digest_lens`: array of lengths for each digest
 * - `num_digests`: number of digests
 *
 * # Returns
 *
 * `IsccByteBuffer` with the SimHash result. On error, `.data` is `NULL`.
 * Caller must free with `iscc_free_byte_buffer()`.
 *
 * # Safety
 *
 * - `digests` must point to an array of `num_digests` valid byte pointers
 * - `digest_lens` must point to an array of `num_digests` lengths
 * - Each `digests[i]` must be valid for `digest_lens[i]` bytes
 */

struct iscc_IsccByteBuffer iscc_alg_simhash(const uint8_t *const *digests,
                                            const uintptr_t *digest_lens,
                                            uintptr_t num_digests);
/**
 * Compute a 256-bit MinHash digest from 32-bit integer features.
 *
 * Uses 64 universal hash functions with bit-interleaved compression to
 * produce a 32-byte similarity-preserving digest.
 *
 * # Parameters
 *
 * - `features`: pointer to `u32` feature values
 * - `features_len`: number of features
 *
 * # Returns
 *
 * `IsccByteBuffer` with 32 bytes. On error, `.data` is `NULL`.
 * Caller must free with `iscc_free_byte_buffer()`.
 *
 * # Safety
 *
 * `features` must point to a valid buffer of at least `features_len` `u32` elements.
 */
 struct iscc_IsccByteBuffer iscc_alg_minhash_256(const uint32_t *features, uintptr_t features_len);
/**
 * Split data into content-defined chunks using gear rolling hash.
 *
 * Returns at least one chunk (empty bytes for empty input). When `utf32`
 * is true, aligns cut points to 4-byte boundaries.
 *
 * # Parameters
 *
 * - `data`: pointer to raw byte data
 * - `data_len`: number of bytes
 * - `utf32`: if true, align cuts to 4-byte boundaries
 * - `avg_chunk_size`: target average chunk size in bytes
 *
 * # Returns
 *
 * `IsccByteBufferArray` with chunks. On error, `.buffers` is `NULL`.
 * Caller must free with `iscc_free_byte_buffer_array()`.
 *
 * # Safety
 *
 * `data` must point to a valid buffer of at least `data_len` bytes.
 */

struct iscc_IsccByteBufferArray iscc_alg_cdc_chunks(const uint8_t *data,
                                                    uintptr_t data_len,
                                                    bool utf32,
                                                    uint32_t avg_chunk_size);
/**
 * Compute a similarity-preserving hash from video frame signatures.
 *
 * Returns raw bytes of length `bits / 8`. Errors if `frame_sigs` is empty.
 *
 * # Parameters
 *
 * - `frame_sigs`: array of pointers to frame signature arrays (`i32`)
 * - `frame_lens`: array of lengths for each frame signature
 * - `num_frames`: number of frames
 * - `bits`: hash bit length (typically 64)
 *
 * # Returns
 *
 * `IsccByteBuffer` with the hash result. On error, `.data` is `NULL`.
 * Caller must free with `iscc_free_byte_buffer()`.
 *
 * # Safety
 *
 * - `frame_sigs` must point to an array of `num_frames` valid pointers
 * - `frame_lens` must point to an array of `num_frames` lengths
 * - Each `frame_sigs[i]` must be valid for `frame_lens[i]` `i32` elements
 */

struct iscc_IsccByteBuffer iscc_soft_hash_video_v0(const int32_t *const *frame_sigs,
                                                   const uintptr_t *frame_lens,
                                                   uintptr_t num_frames,
                                                   uint32_t bits);
/**
 * Create a new streaming Data-Code hasher.
 *
 * Returns an opaque pointer. The caller must eventually call
 * `iscc_data_hasher_free()` to release the memory.
 */
 struct iscc_FfiDataHasher *iscc_data_hasher_new(void);
/**
 * Push data into a streaming DataHasher.
 *
 * Returns `true` on success, `false` on error (e.g., already finalized
 * or NULL pointer). Check `iscc_last_error()` for the error message.
 *
 * # Safety
 *
 * - `hasher` must be a valid pointer from `iscc_data_hasher_new()`, or NULL.
 * - `data` must point to at least `data_len` valid bytes.
 */

bool iscc_data_hasher_update(struct iscc_FfiDataHasher *hasher,
                             const uint8_t *data,
                             uintptr_t data_len);
/**
 * Finalize a streaming DataHasher and return an ISCC string.
 *
 * Consumes the inner hasher state. After this call, subsequent `update`
 * or `finalize` calls will fail. The caller must still call
 * `iscc_data_hasher_free()` to release the wrapper, and `iscc_free_string()`
 * to release the returned string.
 *
 * # Safety
 *
 * `hasher` must be a valid pointer from `iscc_data_hasher_new()`, or NULL.
 */
 char *iscc_data_hasher_finalize(struct iscc_FfiDataHasher *hasher, uint32_t bits);
/**
 * Free a DataHasher previously created by `iscc_data_hasher_new()`.
 *
 * NULL is a no-op. Each pointer must be freed exactly once.
 *
 * # Safety
 *
 * `hasher` must be a valid pointer from `iscc_data_hasher_new()`, or NULL.
 */
 void iscc_data_hasher_free(struct iscc_FfiDataHasher *hasher);
/**
 * Create a new streaming Instance-Code hasher.
 *
 * Returns an opaque pointer. The caller must eventually call
 * `iscc_instance_hasher_free()` to release the memory.
 */
 struct iscc_FfiInstanceHasher *iscc_instance_hasher_new(void);
/**
 * Push data into a streaming InstanceHasher.
 *
 * Returns `true` on success, `false` on error (e.g., already finalized
 * or NULL pointer). Check `iscc_last_error()` for the error message.
 *
 * # Safety
 *
 * - `hasher` must be a valid pointer from `iscc_instance_hasher_new()`, or NULL.
 * - `data` must point to at least `data_len` valid bytes.
 */

bool iscc_instance_hasher_update(struct iscc_FfiInstanceHasher *hasher,
                                 const uint8_t *data,
                                 uintptr_t data_len);
/**
 * Finalize a streaming InstanceHasher and return an ISCC string.
 *
 * Consumes the inner hasher state. After this call, subsequent `update`
 * or `finalize` calls will fail. The caller must still call
 * `iscc_instance_hasher_free()` to release the wrapper, and
 * `iscc_free_string()` to release the returned string.
 *
 * # Safety
 *
 * `hasher` must be a valid pointer from `iscc_instance_hasher_new()`, or NULL.
 */
 char *iscc_instance_hasher_finalize(struct iscc_FfiInstanceHasher *hasher, uint32_t bits);
/**
 * Free an InstanceHasher previously created by `iscc_instance_hasher_new()`.
 *
 * NULL is a no-op. Each pointer must be freed exactly once.
 *
 * # Safety
 *
 * `hasher` must be a valid pointer from `iscc_instance_hasher_new()`, or NULL.
 */
 void iscc_instance_hasher_free(struct iscc_FfiInstanceHasher *hasher);
/**
 * Free a string previously returned by any `iscc_gen_*` function.
 *
 * # Safety
 *
 * `ptr` must be a pointer returned by one of the `iscc_gen_*_v0` functions,
 * or `NULL` (which is a no-op). Each pointer must only be freed once.
 */
 void iscc_free_string(char *ptr);
/**
 * Free a NULL-terminated string array returned by `iscc_decompose` or
 * `iscc_sliding_window`.
 *
 * Walks the array, freeing each string via `CString::from_raw`, then frees
 * the array itself. `NULL` is a no-op.
 *
 * # Safety
 *
 * `arr` must be a pointer returned by `iscc_decompose` or `iscc_sliding_window`,
 * or `NULL`. Each array must only be freed once.
 */
 void iscc_free_string_array(char **arr);
/**
 * Free a byte buffer returned by `iscc_alg_simhash`, `iscc_alg_minhash_256`,
 * or `iscc_soft_hash_video_v0`.
 *
 * No-op if `buf.data` is `NULL`.
 *
 * # Safety
 *
 * `buf` must be a value returned by one of the algorithm primitive functions.
 * Each buffer must only be freed once.
 */
 void iscc_free_byte_buffer(struct iscc_IsccByteBuffer buf);
/**
 * Free a byte buffer array returned by `iscc_alg_cdc_chunks`.
 *
 * Frees each buffer's data, then the array itself. No-op if `arr.buffers`
 * is `NULL`.
 *
 * # Safety
 *
 * `arr` must be a value returned by `iscc_alg_cdc_chunks`.
 * Each array must only be freed once.
 */
 void iscc_free_byte_buffer_array(struct iscc_IsccByteBufferArray arr);
/**
 * Return the last error message from the current thread.
 *
 * Returns a pointer to a null-terminated string valid until the next
 * `iscc_gen_*` call on the same thread. Returns `NULL` if no error
 * has occurred.
 *
 * The returned pointer must NOT be freed by the caller.
 */
 const char *iscc_last_error(void);