packages/dotnet/Iscc.Lib/NativeMethods.g.cs


        /// <summary>
        ///  Compute a SimHash digest from an array of byte digests.
        ///
        ///  The output length matches the input digest length (e.g., 4-byte digests
        ///  produce a 4-byte SimHash). Returns an empty 32-byte buffer for empty input.
        ///
        ///  # Parameters
        ///
        ///  - `digests`: array of pointers to digest byte arrays
        ///  - `digest_lens`: array of lengths for each digest
        ///  - `num_digests`: number of digests
        ///
        ///  # Returns
        ///
        ///  `IsccByteBuffer` with the SimHash result. On error, `.data` is `NULL`.
        ///  Caller must free with `iscc_free_byte_buffer()`.
        ///
        ///  # Safety
        ///
        ///  - `digests` must point to an array of `num_digests` valid byte pointers
        ///  - `digest_lens` must point to an array of `num_digests` lengths
        ///  - Each `digests[i]` must be valid for `digest_lens[i]` bytes
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_alg_simhash", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern IsccByteBuffer iscc_alg_simhash(byte** digests, nuint* digest_lens, nuint num_digests);

        /// <summary>
        ///  Compute a 256-bit MinHash digest from 32-bit integer features.
        ///
        ///  Uses 64 universal hash functions with bit-interleaved compression to
        ///  produce a 32-byte similarity-preserving digest.
        ///
        ///  # Parameters
        ///
        ///  - `features`: pointer to `u32` feature values
        ///  - `features_len`: number of features
        ///
        ///  # Returns
        ///
        ///  `IsccByteBuffer` with 32 bytes. On error, `.data` is `NULL`.
        ///  Caller must free with `iscc_free_byte_buffer()`.
        ///
        ///  # Safety
        ///
        ///  `features` must point to a valid buffer of at least `features_len` `u32` elements.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_alg_minhash_256", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern IsccByteBuffer iscc_alg_minhash_256(uint* features, nuint features_len);

        /// <summary>
        ///  Split data into content-defined chunks using gear rolling hash.
        ///
        ///  Returns at least one chunk (empty bytes for empty input). When `utf32`
        ///  is true, aligns cut points to 4-byte boundaries.
        ///
        ///  # Parameters
        ///
        ///  - `data`: pointer to raw byte data
        ///  - `data_len`: number of bytes
        ///  - `utf32`: if true, align cuts to 4-byte boundaries
        ///  - `avg_chunk_size`: target average chunk size in bytes
        ///
        ///  # Returns
        ///
        ///  `IsccByteBufferArray` with chunks. On error, `.buffers` is `NULL`.
        ///  Caller must free with `iscc_free_byte_buffer_array()`.
        ///
        ///  # Safety
        ///
        ///  `data` must point to a valid buffer of at least `data_len` bytes.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_alg_cdc_chunks", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern IsccByteBufferArray iscc_alg_cdc_chunks(byte* data, nuint data_len, [MarshalAs(UnmanagedType.U1)] bool utf32, uint avg_chunk_size);

        /// <summary>
        ///  Compute a similarity-preserving hash from video frame signatures.
        ///
        ///  Returns raw bytes of length `bits / 8`. Errors if `frame_sigs` is empty.
        ///
        ///  # Parameters
        ///
        ///  - `frame_sigs`: array of pointers to frame signature arrays (`i32`)
        ///  - `frame_lens`: array of lengths for each frame signature
        ///  - `num_frames`: number of frames
        ///  - `bits`: hash bit length (typically 64)
        ///
        ///  # Returns
        ///
        ///  `IsccByteBuffer` with the hash result. On error, `.data` is `NULL`.
        ///  Caller must free with `iscc_free_byte_buffer()`.
        ///
        ///  # Safety
        ///
        ///  - `frame_sigs` must point to an array of `num_frames` valid pointers
        ///  - `frame_lens` must point to an array of `num_frames` lengths
        ///  - Each `frame_sigs[i]` must be valid for `frame_lens[i]` `i32` elements
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_soft_hash_video_v0", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern IsccByteBuffer iscc_soft_hash_video_v0(int** frame_sigs, nuint* frame_lens, nuint num_frames, uint bits);

        /// <summary>
        ///  Create a new streaming Data-Code hasher.
        ///
        ///  Returns an opaque pointer. The caller must eventually call
        ///  `iscc_data_hasher_free()` to release the memory.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_data_hasher_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiDataHasher* iscc_data_hasher_new();

        /// <summary>
        ///  Push data into a streaming DataHasher.
        ///
        ///  Returns `true` on success, `false` on error (e.g., already finalized
        ///  or NULL pointer). Check `iscc_last_error()` for the error message.
        ///
        ///  # Safety
        ///
        ///  - `hasher` must be a valid pointer from `iscc_data_hasher_new()`, or NULL.
        ///  - `data` must point to at least `data_len` valid bytes.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_data_hasher_update", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool iscc_data_hasher_update(FfiDataHasher* hasher, byte* data, nuint data_len);

        /// <summary>
        ///  Finalize a streaming DataHasher and return an ISCC string.
        ///
        ///  Consumes the inner hasher state. After this call, subsequent `update`
        ///  or `finalize` calls will fail. The caller must still call
        ///  `iscc_data_hasher_free()` to release the wrapper, and `iscc_free_string()`
        ///  to release the returned string.
        ///
        ///  # Safety
        ///
        ///  `hasher` must be a valid pointer from `iscc_data_hasher_new()`, or NULL.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_data_hasher_finalize", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* iscc_data_hasher_finalize(FfiDataHasher* hasher, uint bits);

        /// <summary>
        ///  Free a DataHasher previously created by `iscc_data_hasher_new()`.
        ///
        ///  NULL is a no-op. Each pointer must be freed exactly once.
        ///
        ///  # Safety
        ///
        ///  `hasher` must be a valid pointer from `iscc_data_hasher_new()`, or NULL.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_data_hasher_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void iscc_data_hasher_free(FfiDataHasher* hasher);

        /// <summary>
        ///  Create a new streaming Instance-Code hasher.
        ///
        ///  Returns an opaque pointer. The caller must eventually call
        ///  `iscc_instance_hasher_free()` to release the memory.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_instance_hasher_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiInstanceHasher* iscc_instance_hasher_new();

        /// <summary>
        ///  Push data into a streaming InstanceHasher.
        ///
        ///  Returns `true` on success, `false` on error (e.g., already finalized
        ///  or NULL pointer). Check `iscc_last_error()` for the error message.
        ///
        ///  # Safety
        ///
        ///  - `hasher` must be a valid pointer from `iscc_instance_hasher_new()`, or NULL.
        ///  - `data` must point to at least `data_len` valid bytes.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_instance_hasher_update", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool iscc_instance_hasher_update(FfiInstanceHasher* hasher, byte* data, nuint data_len);

        /// <summary>
        ///  Finalize a streaming InstanceHasher and return an ISCC string.
        ///
        ///  Consumes the inner hasher state. After this call, subsequent `update`
        ///  or `finalize` calls will fail. The caller must still call
        ///  `iscc_instance_hasher_free()` to release the wrapper, and
        ///  `iscc_free_string()` to release the returned string.
        ///
        ///  # Safety
        ///
        ///  `hasher` must be a valid pointer from `iscc_instance_hasher_new()`, or NULL.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_instance_hasher_finalize", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* iscc_instance_hasher_finalize(FfiInstanceHasher* hasher, uint bits);

        /// <summary>
        ///  Free an InstanceHasher previously created by `iscc_instance_hasher_new()`.
        ///
        ///  NULL is a no-op. Each pointer must be freed exactly once.
        ///
        ///  # Safety
        ///
        ///  `hasher` must be a valid pointer from `iscc_instance_hasher_new()`, or NULL.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_instance_hasher_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void iscc_instance_hasher_free(FfiInstanceHasher* hasher);

        /// <summary>
        ///  Free a string previously returned by any `iscc_gen_*` function.
        ///
        ///  # Safety
        ///
        ///  `ptr` must be a pointer returned by one of the `iscc_gen_*_v0` functions,
        ///  or `NULL` (which is a no-op). Each pointer must only be freed once.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_free_string", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void iscc_free_string(byte* ptr);

        /// <summary>
        ///  Free a NULL-terminated string array returned by `iscc_decompose` or
        ///  `iscc_sliding_window`.
        ///
        ///  Walks the array, freeing each string via `CString::from_raw`, then frees
        ///  the array itself. `NULL` is a no-op.
        ///
        ///  # Safety
        ///
        ///  `arr` must be a pointer returned by `iscc_decompose` or `iscc_sliding_window`,
        ///  or `NULL`. Each array must only be freed once.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_free_string_array", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void iscc_free_string_array(byte** arr);

        /// <summary>
        ///  Free a byte buffer returned by `iscc_alg_simhash`, `iscc_alg_minhash_256`,
        ///  or `iscc_soft_hash_video_v0`.
        ///
        ///  No-op if `buf.data` is `NULL`.
        ///
        ///  # Safety
        ///
        ///  `buf` must be a value returned by one of the algorithm primitive functions.
        ///  Each buffer must only be freed once.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "iscc_free_byte_buffer", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void iscc_free_byte_buffer(IsccByteBuffer buf);
